- On the city screen, hold shift when clicking a specialist to switch to the previous type
- Do not group units with differing charm statuses

* RELEASE 10
- Scenario-specific mod configurations (see README for more info)
- Mod info button
  - Tells the mod version and file names of currently loaded configs
  - Located on the upper right of the preferences screen
- Better logic for grouping units on right click menu
- Option to let units move after airdropping
- Fix phantom resource bug
- Fix air units losing a turn after being set to intercept
- L key loads unit over activating AI city loc highlighter

* RELEASE 9
- Perfume can be applied to multiple improvements or unit types
- Corruption can be completely removed with "OFF" government setting
- Press P in city screen to see AI point value for each available build
- Press L on map to see how desirable the AI finds each tile as a city location
- AI naval invasion forces can include artillery (with offensive artillery AI enabled)
- Option to disable worker automation
- Disallow land settlers from founding on water
- Warn in case perfume target doesn't match any unit or improvement name
- Fix tile coords replacing resource name in the info box on the Steam version
- Proper movement check for replacement army inclusion criteria

* RELEASE 8
- Stack fortify, upgrade, and disband
- AI routine for "pop units" that may appear in mods
- Group units on right click menu
- Show coordinates and chopped status in tile info box
- Show golden age turns remaining
- Trespassing prevention (experimental)
- Land/sea intersections
- Adjustable anarchy length
- "Perfume" an improvement to make it more appealing to the AI
- No special king unit names in non-regicide games
- Stack worker commands apply across unit types

* RELEASE 7
- Buttons on trade screen to quickly switch between civs
- Ask/offer gold popup autofills best amount
- Adjustable minimum city distance

* RELEASE 6