@@ -111,5 +111,9 @@ enable_ai_production_ranking = true
 enable_ai_city_location_desirability_display = true
 
 zero_corruption_when_off = true
-disallow_land_units_from_settling_water = true
+
+; Prevents land settlers/workers on transports from settling/improving water tiles. This option does not affect the vanilla game but is useful for
+; mods that enable city building or improvement of water tiles.
+disallow_land_units_from_affecting_water_tiles = true
+
 dont_end_units_turn_after_airdrop = false
